[gd_scene load_steps=11 format=4 uid="uid://deu71iv6k8qbb"]

[ext_resource type="Script" uid="uid://kdvtkn47bc4j" path="res://World/overworld.gd" id="1_8evhv"]
[ext_resource type="TileSet" uid="uid://7jxo4pb7voin" path="res://World/overworld.tres" id="2_rq655"]
[ext_resource type="Script" uid="uid://366r18q4wyvt" path="res://World/main_map.gd" id="3_4e477"]
[ext_resource type="PackedScene" uid="uid://nsn8yjexaiu8" path="res://World/Actors/player.tscn" id="5_ai1om"]
[ext_resource type="Texture2D" uid="uid://bus1p3g5j31jv" path="res://World/Art/Numbers Tileset.png" id="6_q5spx"]
[ext_resource type="Script" uid="uid://f2k7qdjc6d03" path="res://World/enemy_spawn_areas.gd" id="7_cw2do"]
[ext_resource type="PackedScene" uid="uid://b3betfxyfbejd" path="res://World/danger.tscn" id="8_mmynj"]
[ext_resource type="Script" uid="uid://bqy15of7ocbvv" path="res://World/transition_area.gd" id="9_m72c5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nwoe1"]
texture = ExtResource("6_q5spx")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
1:3/0 = 0
3:0/0 = 0
3:1/0 = 0
3:2/0 = 0
0:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0

[sub_resource type="TileSet" id="TileSet_rd72h"]
sources/0 = SubResource("TileSetAtlasSource_nwoe1")

[node name="Gate0" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_8evhv")
spawn_facing = 3

[node name="MainMap" type="TileMapLayer" parent="."]
y_sort_enabled = true
position = Vector2(-1, 0)
tile_map_data = PackedByteArray("AADv//T/AgAGAAcAAADv//X/AgAGAAYAAADv//b/AgAGAAcAAADv//f/AgAGAAYAAADv//j/AgAGAAcAAADv//n/AgAHAAUAAADv//r/AgABAAMAAADv//v/AgABAAMAAADv//z/AgABAAMAAADv//3/AgABAAMAAADv//7/AgABAAMAAADv////AgABAAMAAADv/wAAAgAGAAMAAADv/wEAAgAGAAMAAADv/wIAAgAGAAMAAADv/wMAAgAGAAMAAADv/wQAAgAGAAMAAADv/wUAAgABAAMAAADv/wYAAgABAAMAAADv/wcAAgAHAAcAAADv/wgAAgAHAAYAAADv/wkAAgAHAAcAAADv/woAAgAHAAYAAADv/wsAAgAHAAcAAADv/wwAAgAHAAYAAADv/w0AAgAHAAcAAADw//T/AgAHAAUAAADw//X/AgAHAAQAAADw//b/AgAHAAUAAADw//f/AgAHAAQAAADw//j/AgAHAAcAAADw//n/AgAGAAUAAADw//r/AgABAAMAAADw//v/AgABAAMAAADw//z/AgABAAMAAADw//3/AgABAAMAAADw//7/AgABAAMAAADw////AgABAAMAAADw/wAAAgABAAMAAADw/wEAAgABAAMAAADw/wIAAgABAAMAAADw/wMAAgAGAAMAAADw/wQAAgAGAAMAAADw/wUAAgAGAAMAAADw/wYAAgAGAAQAAADw/wcAAgAGAAcAAADw/wgAAgAGAAYAAADw/wkAAgAGAAcAAADw/woAAgAGAAYAAADw/wsAAgAGAAcAAADw/wwAAgAGAAYAAADw/w0AAgAGAAcAAADx//T/AgAGAAUAAADx//X/AgABAAMAAADx//b/AgABAAMAAADx//f/AgAGAAQAAADx//j/AgAHAAYAAADx//n/AgAHAAUAAADx//r/AgABAAMAAADx//v/AgABAAMAAADx//z/AgABAAMAAADx//3/AgABAAMAAADx//7/AgABAAMAAADx////AgABAAMAAADx/wAAAgABAAMAAADx/wEAAgABAAMAAADx/wIAAgABAAMAAADx/wMAAgABAAMAAADx/wQAAgABAAMAAADx/wUAAgAGAAMAAADx/wYAAgAHAAQAAADx/wcAAgAHAAcAAADx/wgAAgAHAAYAAADx/wkAAgAHAAcAAADx/woAAgAHAAYAAADx/wsAAgAHAAcAAADx/wwAAgAHAAYAAADx/w0AAgAHAAcAAADy//T/AgAHAAUAAADy//X/AgABAAMAAADy//b/AgABAAMAAADy//f/AgAHAAQAAADy//j/AgAHAAUAAADy//n/AgABAAMAAADy//r/AgABAAMAAADy//v/AgABAAMAAADy//z/AgABAAMAAADy//3/AgAGAAIAAADy//7/AgAGAAIAAADy////AgAGAAIAAADy/wAAAgAGAAIAAADy/wEAAgAGAAIAAADy/wIAAgABAAMAAADy/wMAAgABAAMAAADy/wQAAgABAAMAAADy/wUAAgAGAAMAAADy/wYAAgAGAAQAAADy/wcAAgAGAAcAAADy/wgAAgAGAAYAAADy/wkAAgAGAAcAAADy/woAAgAGAAYAAADy/wsAAgAGAAcAAADy/wwAAgAGAAYAAADy/w0AAgAGAAcAAADz//T/AgAGAAUAAADz//X/AgABAAMAAADz//b/AgABAAMAAADz//f/AgABAAMAAADz//j/AgABAAMAAADz//n/AgABAAMAAADz//r/AgABAAMAAADz//v/AgABAAMAAADz//z/AgAGAAIAAADz//3/AgAGAAIAAADz//7/AgAGAAIAAADz////AgAGAAIAAADz/wAAAgAGAAIAAADz/wEAAgAGAAIAAADz/wIAAgABAAMAAADz/wMAAgABAAMAAADz/wQAAgABAAMAAADz/wUAAgAGAAMAAADz/wYAAgAHAAQAAADz/wcAAgAHAAcAAADz/wgAAgAHAAYAAADz/wkAAgAHAAcAAADz/woAAgAHAAYAAADz/wsAAgAHAAcAAADz/wwAAgAHAAYAAADz/w0AAgAHAAcAAAD0//T/AgAHAAUAAAD0//X/AgABAAMAAAD0//b/AgABAAMAAAD0//f/AgABAAMAAAD0//j/AgABAAMAAAD0//n/AgABAAMAAAD0//r/AgABAAMAAAD0//v/AgABAAMAAAD0//z/AgABAAMAAAD0//3/AgAGAAIAAAD0//7/AgAGAAIAAAD0////AgAGAAIAAAD0/wAAAgAGAAIAAAD0/wEAAgAGAAIAAAD0/wIAAgAGAAIAAAD0/wMAAgABAAMAAAD0/wQAAgABAAMAAAD0/wUAAgAGAAMAAAD0/wYAAgAGAAQAAAD0/wcAAgAGAAcAAAD0/wgAAgAGAAYAAAD0/wkAAgAGAAcAAAD0/woAAgAGAAYAAAD0/wsAAgAGAAcAAAD0/wwAAgAGAAYAAAD0/w0AAgAGAAcAAAD1//T/AgAGAAUAAAD1//X/AgABAAMAAAD1//b/AgABAAMAAAD1//f/AgABAAMAAAD1//j/AgABAAMAAAD1//n/AgABAAMAAAD1//r/AgABAAMAAAD1//v/AgABAAMAAAD1//z/AgABAAMAAAD1//3/AgABAAMAAAD1//7/AgABAAMAAAD1////AgAGAAIAAAD1/wAAAgAGAAIAAAD1/wEAAgAGAAIAAAD1/wIAAgAGAAIAAAD1/wMAAgABAAMAAAD1/wQAAgABAAMAAAD1/wUAAgAGAAMAAAD1/wYAAgAHAAQAAAD1/wcAAgAHAAcAAAD1/wgAAgAHAAYAAAD1/wkAAgAHAAcAAAD1/woAAgAHAAYAAAD1/wsAAgAHAAcAAAD1/wwAAgAHAAYAAAD1/w0AAgAHAAcAAAD2//T/AgAHAAUAAAD2//X/AgABAAMAAAD2//b/AgABAAMAAAD2//f/AgABAAMAAAD2//j/AgABAAMAAAD2//n/AgABAAMAAAD2//r/AgABAAMAAAD2//v/AgABAAMAAAD2//z/AgABAAMAAAD2//3/AgABAAMAAAD2//7/AgABAAMAAAD2////AgABAAMAAAD2/wAAAgAGAAIAAAD2/wEAAgAGAAIAAAD2/wIAAgAGAAIAAAD2/wMAAgABAAMAAAD2/wQAAgABAAMAAAD2/wUAAgAGAAMAAAD2/wYAAgAGAAQAAAD2/wcAAgAGAAcAAAD2/wgAAgAGAAYAAAD2/wkAAgAGAAcAAAD2/woAAgAGAAcAAAD2/wsAAgAGAAYAAAD2/wwAAgAGAAcAAAD2/w0AAgAGAAcAAAD3//T/AgAGAAUAAAD3//X/AgABAAMAAAD3//b/AgABAAMAAAD3//f/AgABAAMAAAD3//j/AgABAAMAAAD3//n/AgABAAMAAAD3//r/AgABAAMAAAD3//v/AgABAAMAAAD3//z/AgABAAMAAAD3//3/AgABAAMAAAD3//7/AgABAAMAAAD3////AgAIAAAAAAD3/wAAAgAIAAIAAAD3/wEAAgABAAMAAAD3/wIAAgAGAAIAAAD3/wMAAgABAAMAAAD3/wQAAgABAAMAAAD3/wUAAgAGAAMAAAD3/wYAAgAHAAQAAAD3/wcAAgAHAAcAAAD3/wgAAgAHAAYAAAD3/wkAAgAHAAUAAAD3/woAAgAHAAcAAAD3/wsAAgAHAAYAAAD3/wwAAgAHAAUAAAD3/w0AAgAHAAcAAAD4//T/AgAHAAUAAAD4//X/AgABAAMAAAD4//b/AgABAAMAAAD4//f/AgABAAMAAAD4//j/AgABAAMAAAD4//n/AgAGAAMAAAD4//r/AgAGAAMAAAD4//v/AgAGAAMAAAD4//z/AgADAAUAAAD4//3/AgADAAcAAAD4//7/AgABAAMAAAD4////AgAJAAAAAAD4/wAAAgAJAAIAAAD4/wEAAgAJAAIAAAD4/wIAAgABAAMAAAD4/wMAAgABAAMAAAD4/wQAAgABAAMAAAD4/wUAAgAGAAMAAAD4/wYAAgABAAMAAAD4/wcAAgAHAAQAAAD4/wgAAgAHAAUAAAD4/wkAAgABAAMAAAD4/woAAgAHAAQAAAD4/wsAAgAHAAUAAAD4/wwAAgABAAMAAAD4/w0AAgAHAAQAAAD5//T/AgAGAAUAAAD5//X/AgAGAAMAAAD5//b/AgAGAAMAAAD5//f/AgAGAAMAAAD5//j/AgAGAAMAAAD5//n/AgAGAAMAAAD5//r/AgAGAAMAAAD5//v/AgAGAAMAAAD5//z/AgAEAAUAAAD5//3/AgAEAAYAAAD5//7/AgADAAcAAAD5////AgAKAAAAAAD5/wAAAgAJAAIAAAD5/wEAAgAJAAIAAAD5/wIAAgABAAMAAAD5/wMAAgABAAMAAAD5/wQAAgABAAMAAAD5/wUAAgAGAAMAAAD5/wYAAgABAAMAAAD5/wcAAgABAAMAAAD5/wgAAgABAAMAAAD5/wkAAgABAAMAAAD5/woAAgABAAMAAAD5/wsAAgABAAMAAAD5/wwAAgABAAMAAAD5/w0AAgABAAMAAAD6//T/AgAGAAMAAAD6//X/AgAGAAMAAAD6//b/AgALAAAAAAD6//f/AgALAAEAAAD6//j/AgALAAEAAAD6//n/AgALAAEAAAD6//r/AgALAAIAAAD6//v/AgAGAAMAAAD6//z/AgAEAAYAAAD6//3/AgAEAAYAAAD6//7/AgAEAAYAAAD6////AgADAAcAAAD6/wAAAgAKAAAAAAD6/wEAAgAGAAIAAAD6/wIAAgADAAUAAAD6/wMAAgADAAYAAAD6/wQAAgADAAcAAAD6/wUAAgAGAAMAAAD6/wYAAgAGAAMAAAD6/wcAAgAGAAMAAAD6/wgAAgAGAAMAAAD6/wkAAgAGAAMAAAD6/woAAgAGAAMAAAD6/wsAAgAGAAMAAAD6/wwAAgAGAAMAAAD6/w0AAgAGAAMAAAD7//T/AgAGAAMAAAD7//X/AgALAAAAAAD7//b/AgAMAAEAAAD7//f/AgAMAAEAAAD7//j/AgAMAAEAAAD7//n/AgAMAAEAAAD7//r/AgAMAAIAAAD7//v/AgAGAAMAAAD7//z/AgAEAAYAAAD7//7/AgAEAAYAAAD7////AgADAAYAAAD7/wAAAgADAAYAAAD7/wEAAgADAAYAAAD7/wIAAgAEAAYAAAD7/wQAAgAEAAcAAAD7/wUAAgAGAAMAAAD7/wYAAgAGAAMAAAD7/wcAAgAGAAMAAAD7/wgAAgAGAAMAAAD7/wkAAgAGAAMAAAD7/woAAgAGAAMAAAD7/wsAAgAGAAMAAAD7/wwAAgAGAAMAAAD7/w0AAgAGAAMAAAD8//T/AgALAAAAAAD8//b/AgAMAAEAAAD8//f/AgAMAAEAAAD8//j/AgAMAAEAAAD8//n/AgAMAAEAAAD8//r/AgAMAAIAAAD8//v/AgAGAAMAAAD8//z/AgABAAMAAAD8//3/AgAGAAIAAAD8/wAAAgAEAAYAAAD8/wEAAgAEAAYAAAD8/wIAAgAEAAYAAAD8/wMAAgAEAAYAAAD8/wQAAgAEAAcAAAD8/wUAAgAGAAMAAAD8/wYAAgAGAAMAAAD8/wcAAgAGAAMAAAD8/wgAAgAGAAMAAAD8/wkAAgAGAAMAAAD8/woAAgAGAAMAAAD8/wsAAgAGAAMAAAD8/wwAAgAGAAMAAAD8/w0AAgAGAAMAAAD9//T/AgAMAAAAAAD9//X/AgAMAAEAAAD9//b/AgAMAAEAAAD9//f/AgAMAAEAAAD9//j/AgAMAAEAAAD9//n/AgAMAAEAAAD9//r/AgAMAAIAAAD9//v/AgAGAAMAAAD9//z/AgABAAMAAAD9//3/AgABAAMAAAD9//7/AgAFAAUAAAD9////AgAFAAYAAAD9/wIAAgAEAAYAAAD9/wMAAgAEAAYAAAD9/wQAAgAEAAYAAAD9/wUAAgAEAAYAAAD9/wYAAgAEAAYAAAD9/wcAAgAEAAYAAAD9/wgAAgAEAAYAAAD9/wkAAgAEAAYAAAD9/woAAgADAAcAAAD9/wsAAgAGAAIAAAD9/wwAAgAGAAIAAAD9/w0AAgABAAMAAAD+//T/AgAMAAAAAAD+//X/AgAMAAEAAAD+//b/AgAMAAEAAAD+//f/AgAMAAEAAAD+//j/AgAMAAEAAAD+//n/AgAMAAEAAAD+//r/AgAMAAIAAAD+//v/AgAGAAMAAAD+//z/AgABAAMAAAD+//3/AgABAAMAAAD+//7/AgAGAAIAAAD+////AgAGAAIAAAD+/wAAAgAGAAIAAAD+/wEAAgAGAAIAAAD+/wMAAgAEAAYAAAD+/wQAAgAEAAYAAAD+/wUAAgAEAAYAAAD+/wYAAgAEAAYAAAD+/wcAAgAEAAYAAAD+/wgAAgAEAAYAAAD+/wkAAgAEAAYAAAD+/woAAgAEAAYAAAD+/wsAAgADAAYAAAD+/wwAAgADAAYAAAD+/w0AAgADAAYAAAD///T/AgAMAAAAAAD///X/AgAMAAEAAAD///b/AgAMAAEAAAD///f/AgAMAAEAAAD///j/AgAMAAEAAAD///n/AgAMAAEAAAD///r/AgAMAAIAAAD///v/AgAGAAMAAAD///z/AgAEAAYAAAD///3/AgAGAAIAAAD///7/AgAGAAIAAAD/////AgABAAMAAAD//wAAAgAGAAIAAAD//wEAAgADAAUAAAD//wIAAgAEAAYAAAD//wMAAgAEAAYAAAD//wQAAgAEAAYAAAD//wUAAgAEAAYAAAD//wYAAgAEAAYAAAD//wcAAgAFAAYAAAD//wgAAgAFAAYAAAD//wkAAgAFAAYAAAD//woAAgAFAAYAAAD//wsAAgAFAAYAAAD//wwAAgAEAAYAAAD//w0AAgAEAAYAAAAAAPT/AgAMAAAAAAAAAPX/AgAMAAEAAAAAAPb/AgAMAAEAAAAAAPf/AgAMAAEAAAAAAPj/AgAMAAEAAAAAAPn/AgAMAAEAAAAAAPr/AgAMAAIAAAAAAPv/AgAGAAMAAAAAAPz/AgAEAAYAAAAAAP3/AgADAAYAAAAAAP7/AgADAAYAAAAAAP//AgADAAcAAAAAAAAAAgADAAUAAAAAAAEAAgAEAAYAAAAAAAIAAgAEAAYAAAAAAAMAAgAEAAYAAAAAAAQAAgAFAAcAAAAAAAUAAgAEAAYAAAAAAAYAAgAFAAcAAAAAAAcAAgAGAAIAAAAAAAgAAgABAAMAAAAAAAkAAgABAAMAAAAAAAoAAgABAAMAAAAAAAsAAgABAAMAAAAAAAwAAgAFAAUAAAAAAA0AAgAEAAYAAAABAPT/AgANAAAAAAABAPX/AgAMAAEAAAABAPb/AgAMAAEAAAABAPf/AgAMAAEAAAABAPj/AgAMAAEAAAABAPn/AgAMAAEAAAABAPr/AgAMAAIAAAABAPv/AgAGAAMAAAABAPz/AgAEAAYAAAABAP3/AgAEAAYAAAABAP7/AgAEAAYAAAABAP//AgAEAAYAAAABAAAAAgAEAAYAAAABAAEAAgAFAAYAAAABAAIAAgAEAAYAAAABAAMAAgAFAAcAAAABAAQAAgABAAMAAAABAAUAAgAGAAMAAAABAAYAAgAGAAMAAAABAAcAAgAGAAMAAAABAAgAAgAGAAMAAAABAAkAAgAGAAMAAAABAAoAAgAGAAMAAAABAAsAAgAGAAMAAAABAAwAAgAGAAMAAAABAA0AAgAGAAMAAAACAPT/AgAGAAMAAAACAPX/AgANAAAAAAACAPb/AgAMAAEAAAACAPf/AgAMAAEAAAACAPj/AgAMAAEAAAACAPn/AgAMAAEAAAACAPr/AgAMAAIAAAACAPv/AgAGAAMAAAACAPz/AgAEAAYAAAACAP3/AgAEAAYAAAACAP7/AgAEAAYAAAACAP//AgAEAAYAAAACAAAAAgAFAAcAAAACAAEAAgABAAMAAAACAAIAAgAFAAUAAAACAAMAAgADAAcAAAACAAQAAgADAAUAAAACAAUAAgAGAAMAAAACAAYAAgAGAAMAAAACAAcAAgAGAAMAAAACAAgAAgAGAAMAAAACAAkAAgAGAAMAAAACAAoAAgAGAAMAAAACAAsAAgAGAAMAAAACAAwAAgAGAAMAAAACAA0AAgAGAAMAAAADAPT/AgAGAAMAAAADAPX/AgAGAAMAAAADAPb/AgANAAAAAAADAPf/AgANAAEAAAADAPj/AgANAAEAAAADAPn/AgANAAEAAAADAPr/AgANAAIAAAADAPv/AgAGAAMAAAADAPz/AgAEAAUAAAADAP3/AgAEAAYAAAADAP7/AgAEAAYAAAADAP//AgAFAAcAAAADAAAAAgABAAMAAAADAAEAAgABAAMAAAADAAIAAgABAAMAAAADAAMAAgAFAAUAAAADAAQAAgAFAAcAAAADAAUAAgAGAAMAAAADAAYAAgAGAAMAAAADAAcAAgAGAAMAAAADAAgAAgAGAAMAAAADAAkAAgAGAAMAAAADAAoAAgAGAAMAAAADAAsAAgAGAAMAAAADAAwAAgAGAAMAAAADAA0AAgAGAAMAAAAEAPT/AgAGAAYAAAAEAPX/AgAGAAMAAAAEAPb/AgAGAAMAAAAEAPf/AgAGAAMAAAAEAPj/AgAGAAMAAAAEAPn/AgAGAAMAAAAEAPr/AgAGAAMAAAAEAPv/AgAGAAMAAAAEAPz/AgAFAAUAAAAEAP3/AgAFAAYAAAAEAP7/AgAFAAcAAAAEAP//AgABAAMAAAAEAAAAAgABAAMAAAAEAAEAAgAIAAAAAAAEAAIAAgAIAAEAAAAEAAMAAgAIAAEAAAAEAAQAAgAIAAIAAAAEAAUAAgAGAAMAAAAEAAYAAgABAAMAAAAEAAcAAgABAAMAAAAEAAgAAgABAAMAAAAEAAkAAgABAAMAAAAEAAoAAgABAAMAAAAEAAsAAgABAAMAAAAEAAwAAgABAAMAAAAEAA0AAgABAAMAAAAFAPT/AgAHAAYAAAAFAPX/AgAGAAYAAAAFAPb/AgAGAAUAAAAFAPf/AgABAAMAAAAFAPj/AgABAAMAAAAFAPn/AgAGAAMAAAAFAPr/AgAGAAMAAAAFAPv/AgAGAAMAAAAFAPz/AgABAAMAAAAFAP3/AgABAAMAAAAFAP7/AgABAAMAAAAFAP//AgAIAAAAAAAFAAAAAgAIAAEAAAAFAAEAAgAJAAEAAAAFAAIAAgAJAAEAAAAFAAMAAgAJAAEAAAAFAAQAAgAKAAIAAAAFAAUAAgAGAAMAAAAFAAYAAgABAAMAAAAFAAcAAgAGAAQAAAAFAAgAAgAGAAUAAAAFAAkAAgAGAAQAAAAFAAoAAgAGAAUAAAAFAAsAAgAGAAQAAAAFAAwAAgAGAAUAAAAFAA0AAgAGAAQAAAAGAPT/AgAGAAYAAAAGAPX/AgAGAAcAAAAGAPb/AgAHAAUAAAAGAPf/AgABAAMAAAAGAPj/AgABAAMAAAAGAPn/AgABAAMAAAAGAPr/AgABAAMAAAAGAPv/AgABAAMAAAAGAPz/AgABAAMAAAAGAP3/AgABAAMAAAAGAP7/AgABAAMAAAAGAP//AgAKAAEAAAAGAAAAAgAKAAEAAAAGAAEAAgAKAAEAAAAGAAIAAgAKAAEAAAAGAAMAAgAKAAIAAAAGAAQAAgABAAMAAAAGAAUAAgAGAAMAAAAGAAYAAgAGAAQAAAAGAAcAAgAHAAYAAAAGAAgAAgAGAAYAAAAGAAkAAgAHAAYAAAAGAAoAAgAGAAYAAAAGAAsAAgAHAAYAAAAGAAwAAgAGAAYAAAAGAA0AAgAHAAYAAAAHAPT/AgAHAAYAAAAHAPX/AgAGAAYAAAAHAPb/AgAGAAUAAAAHAPf/AgAGAAYAAAAHAPj/AgAGAAUAAAAHAPn/AgABAAMAAAAHAPr/AgABAAMAAAAHAPv/AgABAAMAAAAHAPz/AgABAAMAAAAHAP3/AgABAAMAAAAHAP7/AgABAAMAAAAHAP//AgABAAMAAAAHAAAAAgABAAMAAAAHAAEAAgABAAMAAAAHAAIAAgABAAMAAAAHAAMAAgABAAMAAAAHAAQAAgABAAMAAAAHAAUAAgAGAAMAAAAHAAYAAgAHAAQAAAAHAAcAAgAGAAYAAAAHAAgAAgAHAAYAAAAHAAkAAgAGAAYAAAAHAAoAAgAHAAYAAAAHAAsAAgAGAAYAAAAHAAwAAgAHAAYAAAAHAA0AAgAGAAYAAAAIAPT/AgAGAAYAAAAIAPX/AgAHAAYAAAAIAPb/AgAGAAYAAAAIAPf/AgAHAAYAAAAIAPj/AgAHAAUAAAAIAPn/AgABAAMAAAAIAPr/AgABAAMAAAAIAPv/AgABAAMAAAAIAPz/AgABAAMAAAAIAP3/AgABAAMAAAAIAP7/AgAGAAIAAAAIAP//AgABAAMAAAAIAAAAAgABAAMAAAAIAAEAAgABAAMAAAAIAAIAAgABAAMAAAAIAAMAAgABAAMAAAAIAAQAAgABAAMAAAAIAAUAAgAGAAMAAAAIAAYAAgAGAAQAAAAIAAcAAgAHAAYAAAAIAAgAAgAGAAYAAAAIAAkAAgAHAAYAAAAIAAoAAgAGAAYAAAAIAAsAAgAHAAYAAAAIAAwAAgAGAAYAAAAIAA0AAgAHAAYAAAAJAPT/AgAHAAYAAAAJAPX/AgAGAAYAAAAJAPb/AgAHAAYAAAAJAPf/AgAGAAYAAAAJAPj/AgAGAAUAAAAJAPn/AgABAAMAAAAJAPr/AgABAAMAAAAJAPv/AgAGAAIAAAAJAPz/AgAGAAIAAAAJAP3/AgAGAAIAAAAJAP7/AgABAAMAAAAJAP//AgAGAAIAAAAJAAAAAgAGAAIAAAAJAAEAAgABAAMAAAAJAAIAAgABAAMAAAAJAAMAAgABAAMAAAAJAAQAAgABAAMAAAAJAAUAAgAGAAMAAAAJAAYAAgAHAAQAAAAJAAcAAgAGAAYAAAAJAAgAAgAHAAYAAAAJAAkAAgAGAAYAAAAJAAoAAgAHAAYAAAAJAAsAAgAGAAYAAAAJAAwAAgAHAAYAAAAJAA0AAgAGAAYAAAAKAPT/AgAGAAYAAAAKAPX/AgAHAAYAAAAKAPb/AgAGAAYAAAAKAPf/AgAHAAYAAAAKAPj/AgAHAAUAAAAKAPn/AgABAAMAAAAKAPr/AgABAAMAAAAKAPv/AgABAAMAAAAKAPz/AgABAAMAAAAKAP3/AgAGAAIAAAAKAP7/AgAGAAIAAAAKAP//AgAGAAIAAAAKAAAAAgAGAAIAAAAKAAEAAgAGAAIAAAAKAAIAAgABAAMAAAAKAAMAAgABAAMAAAAKAAQAAgABAAMAAAAKAAUAAgAGAAMAAAAKAAYAAgAGAAQAAAAKAAcAAgAHAAYAAAAKAAgAAgAGAAYAAAAKAAkAAgAHAAYAAAAKAAoAAgAGAAYAAAAKAAsAAgAHAAYAAAAKAAwAAgAGAAYAAAAKAA0AAgAHAAYAAAALAPT/AgAHAAYAAAALAPX/AgAGAAYAAAALAPb/AgAHAAYAAAALAPf/AgAGAAYAAAALAPj/AgAGAAUAAAALAPn/AgABAAMAAAALAPr/AgABAAMAAAALAPv/AgABAAMAAAALAPz/AgAGAAIAAAALAP3/AgAGAAIAAAALAP7/AgAGAAIAAAALAP//AgAGAAIAAAALAAAAAgAGAAIAAAALAAEAAgABAAMAAAALAAIAAgABAAMAAAALAAMAAgABAAMAAAALAAQAAgABAAMAAAALAAUAAgAGAAMAAAALAAYAAgAHAAQAAAALAAcAAgAGAAYAAAALAAgAAgAHAAYAAAALAAkAAgAGAAYAAAALAAoAAgAHAAYAAAALAAsAAgAGAAYAAAALAAwAAgAHAAYAAAALAA0AAgAGAAYAAAAMAPT/AgAGAAYAAAAMAPX/AgAHAAYAAAAMAPb/AgAGAAYAAAAMAPf/AgAHAAYAAAAMAPj/AgAHAAUAAAAMAPn/AgABAAMAAAAMAPr/AgABAAMAAAAMAPv/AgABAAMAAAAMAPz/AgABAAMAAAAMAP3/AgAGAAIAAAAMAP7/AgAGAAIAAAAMAP//AgAGAAIAAAAMAAAAAgAGAAIAAAAMAAEAAgABAAMAAAAMAAIAAgABAAMAAAAMAAMAAgABAAMAAAAMAAQAAgABAAMAAAAMAAUAAgAGAAMAAAAMAAYAAgAGAAQAAAAMAAcAAgAHAAYAAAAMAAgAAgAGAAYAAAAMAAkAAgAHAAYAAAAMAAoAAgAGAAYAAAAMAAsAAgAHAAYAAAAMAAwAAgAGAAYAAAAMAA0AAgAHAAYAAAANAPT/AgAHAAYAAAANAPX/AgAGAAYAAAANAPb/AgAHAAYAAAANAPf/AgAGAAYAAAANAPj/AgAGAAUAAAANAPn/AgABAAMAAAANAPr/AgABAAMAAAANAPv/AgABAAMAAAANAPz/AgAGAAIAAAANAP3/AgABAAMAAAANAP7/AgABAAMAAAANAP//AgABAAMAAAANAAAAAgAGAAIAAAANAAEAAgABAAMAAAANAAIAAgABAAMAAAANAAMAAgABAAMAAAANAAQAAgABAAMAAAANAAUAAgAGAAMAAAANAAYAAgAHAAQAAAANAAcAAgAGAAYAAAANAAgAAgAHAAYAAAANAAkAAgAGAAYAAAANAAoAAgAHAAYAAAANAAsAAgAGAAYAAAANAAwAAgAHAAYAAAANAA0AAgAGAAYAAAAOAPT/AgAGAAYAAAAOAPX/AgAHAAYAAAAOAPb/AgAGAAYAAAAOAPf/AgAHAAYAAAAOAPj/AgAHAAUAAAAOAPn/AgABAAMAAAAOAPr/AgABAAMAAAAOAPv/AgABAAMAAAAOAPz/AgABAAMAAAAOAP3/AgABAAMAAAAOAP7/AgABAAMAAAAOAP//AgABAAMAAAAOAAAAAgABAAMAAAAOAAEAAgABAAMAAAAOAAIAAgABAAMAAAAOAAMAAgAGAAMAAAAOAAQAAgAGAAMAAAAOAAUAAgAGAAMAAAAOAAYAAgAGAAQAAAAOAAcAAgAHAAYAAAAOAAgAAgAGAAYAAAAOAAkAAgAHAAYAAAAOAAoAAgAGAAYAAAAOAAsAAgAHAAYAAAAOAAwAAgAGAAYAAAAOAA0AAgAHAAYAAAAPAPT/AgAHAAYAAAAPAPX/AgAGAAYAAAAPAPb/AgAHAAYAAAAPAPf/AgAGAAYAAAAPAPj/AgAGAAUAAAAPAPn/AgABAAMAAAAPAPr/AgABAAMAAAAPAPv/AgABAAMAAAAPAPz/AgABAAMAAAAPAP3/AgABAAMAAAAPAP7/AgABAAMAAAAPAP//AgABAAMAAAAPAAAAAgAGAAMAAAAPAAEAAgAGAAMAAAAPAAIAAgAGAAMAAAAPAAMAAgAGAAMAAAAPAAQAAgAGAAMAAAAPAAUAAgABAAMAAAAPAAYAAgAHAAQAAAAPAAcAAgAGAAYAAAAPAAgAAgAHAAYAAAAPAAkAAgAGAAYAAAAPAAoAAgAHAAYAAAAPAAsAAgAGAAYAAAAPAAwAAgAHAAYAAAAPAA0AAgAGAAYAAAAQAPT/AgAGAAYAAAAQAPX/AgAHAAYAAAAQAPb/AgAGAAYAAAAQAPf/AgAHAAYAAAAQAPj/AgAHAAUAAAAQAPn/AgABAAMAAAAQAPr/AgABAAMAAAAQAPv/AgAGAAMAAAAQAPz/AgAGAAMAAAAQAP3/AgAGAAMAAAAQAP7/AgAGAAMAAAAQAP//AgAGAAMAAAAQAAAAAgAGAAMAAAAQAAEAAgAGAAMAAAAQAAIAAgAGAAMAAAAQAAMAAgAGAAMAAAAQAAQAAgABAAMAAAAQAAUAAgABAAMAAAAQAAYAAgAGAAQAAAAQAAcAAgAHAAYAAAAQAAgAAgAGAAYAAAAQAAkAAgAHAAYAAAAQAAoAAgAGAAYAAAAQAAsAAgAHAAYAAAAQAAwAAgAGAAYAAAAQAA0AAgAHAAYAAAARAPT/AgAHAAYAAAARAPX/AgAGAAYAAAARAPb/AgAHAAYAAAARAPf/AgAGAAYAAAARAPj/AgAGAAUAAAARAPn/AgABAAMAAAARAPr/AgABAAMAAAARAPv/AgAGAAMAAAARAPz/AgAGAAMAAAARAP3/AgAGAAMAAAARAP7/AgAGAAMAAAARAP//AgAGAAMAAAARAAAAAgAGAAMAAAARAAEAAgAGAAMAAAARAAIAAgABAAMAAAARAAMAAgABAAMAAAARAAQAAgABAAMAAAARAAUAAgAGAAQAAAARAAYAAgAHAAYAAAARAAcAAgAGAAYAAAARAAgAAgAHAAYAAAARAAkAAgAGAAYAAAARAAoAAgAHAAYAAAARAAsAAgAGAAYAAAARAAwAAgAHAAYAAAARAA0AAgAGAAYAAAASAPT/AgAGAAYAAAASAPX/AgAHAAYAAAASAPb/AgAGAAYAAAASAPf/AgAHAAYAAAASAPj/AgAHAAUAAAASAPn/AgABAAMAAAASAPr/AgABAAMAAAASAPv/AgABAAMAAAASAPz/AgABAAMAAAASAP3/AgABAAMAAAASAP7/AgABAAMAAAASAP//AgABAAMAAAASAAAAAgABAAMAAAASAAEAAgABAAMAAAASAAIAAgABAAMAAAASAAMAAgABAAMAAAASAAQAAgABAAMAAAASAAUAAgAHAAQAAAASAAYAAgAHAAUAAAASAAcAAgAHAAYAAAASAAgAAgAGAAYAAAASAAkAAgAHAAYAAAASAAoAAgAGAAYAAAASAAsAAgAHAAYAAAASAAwAAgAGAAYAAAASAA0AAgAHAAYAAADq//H/AgABAAMAAADr//H/AgAGAAQAAADq/w8AAgAHAAcAAADq/w4AAgAHAAYAAADp/w0AAgAGAAcAAADp/wwAAgAGAAYAAADp/wsAAgAGAAcAAADp//T/AgAGAAUAAADq//P/AgAHAAYAAADr//L/AgAGAAcAAADs//H/AgAHAAYAAADr/wUAAgAGAAYAAADr/wQAAgAGAAcAAADr/wMAAgAGAAYAAADr/wIAAgAGAAcAAADr/wEAAgAGAAYAAADr/wAAAgAGAAcAAADr////AgAGAAYAAADr//7/AgAGAAcAAADr//3/AgAGAAYAAADr//z/AgAGAAcAAADr//v/AgAGAAYAAADr//r/AgAHAAYAAADr//n/AgAGAAQAAADr//j/AgAGAAUAAADr//f/AgAGAAQAAADr//b/AgAGAAUAAADr//X/AgAGAAYAAADr//T/AgAGAAUAAADr//P/AgAGAAYAAADs//P/AgAHAAYAAADs//L/AgAHAAcAAADt//L/AgAGAAcAAADt//H/AgAGAAYAAADu//H/AgAHAAYAAADu//L/AgAHAAcAAADu//P/AgAHAAYAAADt//P/AgAGAAYAAADt//T/AgAGAAcAAADs//T/AgAHAAcAAADs//X/AgAHAAYAAADs//b/AgAHAAcAAADs//f/AgAHAAYAAADs//j/AgAHAAcAAADs//n/AgAGAAcAAADs//r/AgAHAAUAAADs//v/AgAHAAQAAADs//z/AgAHAAUAAADs//3/AgAHAAQAAADs//7/AgAHAAUAAADs////AgAHAAQAAADs/wAAAgAHAAUAAADs/wEAAgAHAAQAAADs/wIAAgAHAAUAAADs/wMAAgAHAAQAAADs/wQAAgAHAAUAAADs/wUAAgAHAAYAAADs/wYAAgAHAAcAAADr/wYAAgAGAAcAAADq/wYAAgAHAAcAAADq/wUAAgAHAAYAAADq/wQAAgAHAAcAAADq/wMAAgAHAAYAAADq/wIAAgAHAAcAAADq/wEAAgAHAAYAAADq/wAAAgAHAAcAAADq////AgAHAAYAAADq//7/AgAHAAcAAADq//3/AgAHAAYAAADq//z/AgAHAAcAAADq//v/AgAHAAYAAADq//r/AgAGAAQAAADq//n/AgABAAMAAADq//j/AgABAAMAAADq//f/AgABAAMAAADq//b/AgABAAMAAADq//X/AgABAAMAAADq//T/AgAHAAUAAADp//X/AgABAAMAAADp//b/AgABAAMAAADp//f/AgABAAMAAADp//n/AgABAAMAAADp//j/AgABAAMAAADp//r/AgABAAMAAADp//v/AgAGAAQAAADp//z/AgAGAAcAAADp/wAAAgAGAAcAAADp////AgAGAAYAAADp//7/AgAGAAcAAADp//3/AgAGAAYAAADp/wEAAgAGAAYAAADp/wIAAgAGAAcAAADp/wMAAgAGAAYAAADp/wQAAgAGAAcAAADp/wUAAgAGAAYAAADp/wYAAgAGAAcAAADp/wcAAgAGAAcAAADp/wgAAgAGAAYAAADp/wkAAgAGAAcAAADp/woAAgAGAAYAAADq/woAAgAHAAYAAADq/wkAAgAHAAcAAADq/wgAAgAHAAYAAADq/wcAAgAHAAcAAADr/wcAAgAHAAcAAADr/wgAAgAHAAYAAADr/wkAAgAHAAcAAADr/woAAgAHAAYAAADr/wsAAgAHAAcAAADq/wsAAgAHAAcAAADq/wwAAgAHAAYAAADq/w0AAgAHAAcAAADr/w0AAgAHAAcAAADr/wwAAgAHAAYAAADs/wwAAgAGAAYAAADs/wsAAgAGAAcAAADs/woAAgAGAAYAAADs/wkAAgAGAAcAAADs/wgAAgAGAAYAAADs/wcAAgAGAAcAAADt/wcAAgAHAAcAAADt/wYAAgAGAAcAAADt/wUAAgAGAAQAAADt/wQAAgABAAMAAADt/wMAAgABAAMAAADt/wIAAgABAAMAAADt/wEAAgABAAMAAADt/wAAAgAGAAMAAADt////AgAGAAMAAADt//7/AgAGAAMAAADt//3/AgAGAAMAAADt//z/AgAGAAMAAADt//v/AgAGAAMAAADt//r/AgABAAMAAADt//n/AgAHAAUAAADt//j/AgAGAAcAAADt//f/AgAGAAYAAADt//b/AgAGAAcAAADt//X/AgAGAAYAAADu//X/AgAHAAYAAADu//T/AgAHAAcAAADu//b/AgAHAAcAAADu//f/AgAHAAYAAADu//j/AgAHAAcAAADu//n/AgAGAAUAAADu//r/AgABAAMAAADu//v/AgAGAAMAAADu//z/AgAGAAMAAADu//3/AgAGAAMAAADu//7/AgAGAAMAAADu////AgAGAAMAAADu/wAAAgAGAAMAAADu/wEAAgAGAAMAAADu/wIAAgAGAAMAAADu/wMAAgAGAAMAAADu/wQAAgABAAMAAADu/wUAAgAHAAQAAADu/wcAAgAGAAcAAADu/wgAAgAGAAYAAADt/wgAAgAHAAYAAADt/wkAAgAHAAcAAADt/woAAgAHAAYAAADt/wsAAgAHAAcAAADt/wwAAgAHAAYAAADt/w0AAgAHAAcAAADs/w0AAgAGAAcAAADs/w4AAgAGAAYAAADr/w4AAgAHAAYAAADr/w8AAgAHAAcAAADs/w8AAgAGAAcAAADt/w8AAgAHAAcAAADt/w4AAgAHAAYAAADu/w4AAgAGAAYAAADu/w0AAgAGAAcAAADu/wwAAgAGAAYAAADu/wsAAgAGAAcAAADu/woAAgAGAAYAAADu/wkAAgAGAAcAAADu/w8AAgAGAAcAAADv/w8AAgAHAAcAAADv/w4AAgAHAAYAAADw/w4AAgAGAAYAAADw/w8AAgAGAAcAAADx/w8AAgAHAAcAAADx/w4AAgAHAAYAAADy/w4AAgAGAAYAAADy/w8AAgAGAAcAAADz/w8AAgAHAAcAAADz/w4AAgAHAAYAAAD0/w4AAgAGAAYAAAD0/w8AAgAGAAcAAAD1/w8AAgAHAAcAAAD1/w4AAgAHAAYAAAD2/w4AAgAGAAYAAAD2/w8AAgAGAAcAAAD4/w4AAgAHAAUAAAD4/w8AAgABAAMAAAD5/w8AAgABAAMAAAD5/w4AAgABAAMAAAD6/w4AAgAGAAMAAAD6/w8AAgAGAAMAAAD7/w8AAgAGAAMAAAD7/w4AAgAGAAMAAAD8/w4AAgAGAAMAAAD9/w8AAgAFAAUAAAD9/w4AAgABAAMAAAD+/w4AAgADAAcAAAD+/w8AAgABAAMAAAD//w8AAgABAAMAAAD//w4AAgAEAAcAAAAAAA4AAgAEAAcAAAAAAA8AAgAGAAIAAAABAA8AAgAGAAMAAAABAA4AAgAGAAMAAAACAA4AAgAGAAMAAAACAA8AAgAGAAMAAAADAA8AAgAGAAMAAAADAA4AAgAGAAMAAAAEAA4AAgABAAMAAAAEAA8AAgABAAMAAAAFAA8AAgABAAMAAAAFAA4AAgAGAAUAAAAGAA4AAgAGAAYAAAAGAA8AAgAGAAUAAAAHAA8AAgAHAAUAAAAHAA4AAgAHAAYAAAAIAA4AAgAGAAYAAAAIAA8AAgAGAAUAAAAJAA8AAgAGAAYAAAAJAA4AAgAHAAYAAAAKAA4AAgAGAAYAAAAKAA8AAgAHAAYAAAALAA8AAgAGAAYAAAALAA4AAgAHAAYAAAAMAA4AAgAGAAYAAAAMAA8AAgAHAAYAAAANAA8AAgAGAAYAAAANAA4AAgAHAAYAAAAOAA4AAgAGAAYAAAAOAA8AAgAHAAYAAAAPAA8AAgAGAAYAAAAPAA4AAgAHAAYAAAAQAA4AAgAGAAYAAAAQAA8AAgAHAAYAAAARAA8AAgAGAAYAAAARAA4AAgAHAAYAAAASAA4AAgAGAAYAAAASAA8AAgAHAAYAAADv//H/AgAGAAYAAADv//L/AgAGAAcAAADv//P/AgAGAAYAAADw//P/AgAHAAYAAADw//L/AgAHAAcAAADw//H/AgAHAAYAAADx//H/AgAGAAYAAADx//L/AgAGAAcAAADx//P/AgAGAAYAAADy//P/AgAHAAYAAADy//L/AgAHAAcAAADy//H/AgAHAAYAAADz//H/AgAGAAYAAADz//L/AgAGAAcAAADz//P/AgAGAAYAAAD0//P/AgAHAAYAAAD0//L/AgAHAAcAAAD0//H/AgAHAAYAAAD1//H/AgAGAAYAAAD1//L/AgAGAAcAAAD1//P/AgAGAAYAAAD2//P/AgAHAAYAAAD2//L/AgAHAAcAAAD2//H/AgAHAAYAAAD3//H/AgAGAAYAAAD3//L/AgAGAAcAAAD3//P/AgAGAAYAAAD4//P/AgAHAAYAAAD4//L/AgAHAAcAAAD4//H/AgAHAAYAAAD5//H/AgAGAAYAAAD5//L/AgAGAAcAAAD5//P/AgAGAAYAAAD6//P/AgAHAAYAAAD6//L/AgAHAAcAAAD6//H/AgAHAAYAAAD7//H/AgAGAAYAAAD7//L/AgAGAAcAAAD7//P/AgAGAAMAAAD8//P/AgAGAAMAAAD8//L/AgAHAAcAAAD8//H/AgAHAAYAAAD9//H/AgAGAAYAAAD9//L/AgAHAAYAAAD9//P/AgAGAAMAAAD+//P/AgAGAAMAAAD+//L/AgAGAAYAAAD+//H/AgAHAAQAAAD///H/AgAGAAQAAAD///L/AgAHAAYAAAD///P/AgAGAAMAAAAAAPP/AgAGAAMAAAAAAPL/AgAHAAcAAAAAAPH/AgAHAAQAAAABAPH/AgAGAAQAAAABAPL/AgAHAAYAAAABAPP/AgAGAAMAAAACAPP/AgAGAAMAAAACAPL/AgAHAAUAAAACAPH/AgAHAAQAAAADAPH/AgABAAMAAAADAPL/AgABAAMAAAADAPP/AgAGAAQAAAAEAPP/AgAHAAQAAAAEAPL/AgABAAMAAAAEAPH/AgABAAMAAAAFAPH/AgABAAMAAAAFAPL/AgABAAMAAAAFAPP/AgAGAAQAAAAGAPP/AgAHAAQAAAAGAPL/AgABAAMAAAAGAPH/AgABAAMAAAAHAPH/AgAGAAQAAAAHAPL/AgAGAAUAAAAHAPP/AgAGAAQAAAAIAPP/AgAHAAYAAAAIAPL/AgAGAAYAAAAIAPH/AgAHAAYAAAAJAPH/AgAGAAYAAAAJAPL/AgAHAAYAAAAJAPP/AgAGAAYAAAAKAPP/AgAHAAYAAAAKAPL/AgAGAAYAAAAKAPH/AgAHAAYAAAALAPH/AgAGAAYAAAALAPL/AgAHAAYAAAALAPP/AgAGAAYAAAAMAPP/AgAHAAYAAAAMAPL/AgAGAAYAAAAMAPH/AgAHAAYAAAANAPH/AgAGAAYAAAANAPL/AgAHAAYAAAANAPP/AgAGAAYAAAAOAPP/AgAHAAYAAAAOAPL/AgAGAAYAAAAOAPH/AgAHAAYAAAAPAPH/AgAGAAYAAAAPAPL/AgAHAAYAAAAPAPP/AgAGAAYAAAAQAPP/AgAHAAYAAAAQAPL/AgAGAAYAAAAQAPH/AgAHAAYAAAARAPH/AgAGAAYAAAARAPL/AgAHAAYAAAARAPP/AgAGAAYAAAASAPP/AgAHAAYAAAASAPL/AgAGAAYAAAASAPH/AgAHAAYAAADp/w8AAgAGAAcAAADp/w4AAgAGAAYAAADp//H/AgABAAMAAADp//L/AgAHAAQAAADp//P/AgAGAAYAAADq//L/AgAGAAQAAAD8/w8AAgAGAAMAAAD3/w4AAgAHAAYAAAD3/w8AAgAHAAUAAADu/wYAAgAHAAUAAAD8//X/AgAMAAEAAAD7/wMAAgAEAAYAAAD7//3/AgAFAAYAAAD8//7/AgAEAAUAAAD8////AgAEAAYAAAD9/wAAAgAFAAYAAAD+/wIAAgAEAAUAAAD9/wEAAgAFAAYAAAA=")
tile_set = ExtResource("2_rq655")
y_sort_origin = -16
script = ExtResource("3_4e477")

[node name="Solids" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD8/w8AAgAGAAMAAAD8/w4AAgAGAAMAAAD8/w0AAgAGAAMAAAD8/wwAAgAGAAMAAAD8/wsAAgAGAAMAAAD8/woAAgAGAAMAAAD8/wkAAgAGAAMAAAD8/wgAAgAGAAMAAAD8/wcAAgAGAAMAAAD8/wYAAgAGAAMAAAD8/wUAAgAGAAMAAAD7/wUAAgAGAAMAAAD6/wUAAgAGAAMAAAD5/wUAAgAGAAMAAAD4/wUAAgAGAAMAAAD3/wUAAgAGAAMAAAD2/wUAAgAGAAMAAAD1/wUAAgAGAAMAAAD0/wUAAgAGAAMAAADz/wUAAgAGAAMAAADy/wUAAgAGAAMAAADx/wUAAgAGAAMAAADw/wUAAgAGAAMAAADw/wQAAgAGAAMAAADw/wMAAgAGAAMAAADv/wMAAgAGAAMAAADv/wIAAgAGAAMAAADv/wEAAgAGAAMAAADv/wAAAgAGAAMAAADu/wAAAgAGAAMAAADu////AgAGAAMAAADu//7/AgAGAAMAAADu//3/AgAGAAMAAADu//z/AgAGAAMAAADu//v/AgAGAAMAAAABAA8AAgAGAAMAAAABAA4AAgAGAAMAAAABAA0AAgAGAAMAAAABAAwAAgAGAAMAAAABAAsAAgAGAAMAAAABAAoAAgAGAAMAAAABAAkAAgAGAAMAAAABAAgAAgAGAAMAAAABAAcAAgAGAAMAAAABAAYAAgAGAAMAAAABAAUAAgAGAAMAAAACAAUAAgAGAAMAAAADAAUAAgAGAAMAAAAEAAUAAgAGAAMAAAAFAAUAAgAGAAMAAAAGAAUAAgAGAAMAAAAHAAUAAgAGAAMAAAAIAAUAAgAGAAMAAAAJAAUAAgAGAAMAAAAKAAUAAgAGAAMAAAALAAUAAgAGAAMAAAAMAAUAAgAGAAMAAAANAAUAAgAGAAMAAAAOAAUAAgAGAAMAAAAOAAQAAgAGAAMAAAAOAAMAAgAGAAMAAAAPAAIAAgAGAAMAAAAPAAEAAgAGAAMAAAAPAAAAAgAGAAMAAAAQAAAAAgAGAAMAAAAQAP//AgAGAAMAAAAQAP7/AgAGAAMAAAAQAP3/AgAGAAMAAAAQAPz/AgAGAAMAAAAQAPv/AgAGAAMAAAAPAAMAAgAGAAMAAAD3//3/AgAIAAUAAADy/wIAAgAIAAUAAAD0////AgAIAAUAAAALAP//AgAIAAUAAAANAAIAAgAIAAUAAAAIAP3/AgAIAAUAAADw//v/AgAIAAUAAAD2//n/AgAIAAUAAAD8/wIAAgAEAAQAAAABAAEAAgAFAAIAAAABAAAAAgAFAAQAAAD8////AgAFAAQAAAD8/wAAAgAFAAIAAAD//wQAAgAFAAIAAAD8/wMAAgAEAAIAAAD//wMAAgAEAAIAAAD//wIAAgADAAQAAAACAP3/AgADAAQAAAACAP7/AgAEAAIAAAA=")
tile_set = ExtResource("2_rq655")
y_sort_origin = 16
script = ExtResource("3_4e477")

[node name="Top" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_rq655")
y_sort_origin = 16
script = ExtResource("3_4e477")

[node name="Player" parent="." instance=ExtResource("5_ai1om")]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(-19, 212)

[node name="EnemySpawnAreas" type="TileMapLayer" parent="."]
modulate = Color(1, 1, 1, 0.282353)
tile_set = SubResource("TileSet_rd72h")
script = ExtResource("7_cw2do")

[node name="Danger" parent="." instance=ExtResource("8_mmynj")]
limit_base = 50
enabled = false
show_debug_text = false

[node name="Transition" type="Area2D" parent="."]
visible = false
top_level = true
script = ExtResource("9_m72c5")
exit_cell = Vector2(8, -3)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Transition"]
position = Vector2(16, -7)
polygon = PackedVector2Array(-63, 93, -67, 234, 5, 234, 4, 92, 208, 91, 242, 5, 242, -70, 64, -122, 22, -68, -84, -66, -128, -120, -293, -71, -288, 5, -255, 94)

[node name="Transition2" type="Area2D" parent="."]
top_level = true
script = ExtResource("9_m72c5")
exit_cell = Vector2(8, -3)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Transition2"]
position = Vector2(16, -7)
polygon = PackedVector2Array(46, -138, 7, -183, -70, -184, -111, -137, -109, -74, 45, -74)

[connection signal="moved" from="Player" to="." method="_on_player_moved"]
[connection signal="limit_reached" from="Danger" to="." method="_on_danger_limit_reached"]
[connection signal="body_exited" from="Transition" to="Transition" method="_on_body_exited"]
[connection signal="transitioning" from="Transition" to="." method="_on_transition_transitioning"]
[connection signal="body_exited" from="Transition2" to="Transition2" method="_on_body_exited"]
[connection signal="transitioning" from="Transition2" to="." method="_on_transition_transitioning"]
